src/containers/About/slices/Columns/Columns.css
.about__columns {
  margin: 10vh auto!important;
}

.about__columns__col {
  padding: 0 2%;
  flex-wrap: wrap;
  box-sizing: border-box;
}

.about__columns__col img{
  width:100%;
}

.about__columns.-col-4 .about__columns__col {
  flex-basis: 25%;
}

.about__columns.-col-3 .about__columns__col {
  flex-basis: 33.33%;
}

.-spacebelow {
  margin-bottom: 50vh!important;
}

.-above {
  margin-top: 50vh!important;
}

.about__columns--logos .about__columns__col img{
  padding:35%;
  box-sizing: border-box;
}

